--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
 
     <!-- Permissions to enable WiFi -->
     <uses-permission
